--- a/templates/master.html
+++ b/templates/master.html
@@ -22,7 +22,7 @@
     </header>
     {% endblock %}
 
-    <main class='container'>
+    <main class='container-fluid'>
 
       {% block notifs %}
         {% if messages %}
