--- a/campaign_management/templates/campaign_review.html
+++ b/campaign_management/templates/campaign_review.html
@@ -10,6 +10,8 @@
 
 {% block content %}
 
+  <div class='container'>
+
   <div class='row'>
     <div class='col-lg-12'>
       <h3>
@@ -106,6 +108,8 @@
       </a>
 
     </div>
+  </div>
+
   </div>
 
 
