Fix form submission issue.

--- a/campaign_management/templates/campaign_compose.html
+++ b/campaign_management/templates/campaign_compose.html
@@ -27,7 +27,7 @@
 
 
   <div class='row'>
-      <form method='post'>
+      <form method='post' novalidate>
         {% csrf_token %}
         <div class='col-lg-6 col-sm-6'>
           <textarea id='id_html_email'
