--- a/templates/parts/main-navigation.html
+++ b/templates/parts/main-navigation.html
@@ -18,7 +18,7 @@
         <li><a href="/templates">{% trans "Templates" %}</a></li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav pull-right">
         <li><a href="/me"></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -34,7 +34,7 @@
         </li>
       </ul>
     {% else %}
-      <div class="nav navbar-nav navbar-right">
+      <div class="nav navbar-nav pull-right" style="margin-right:15px">
         <a class='btn btn-default navbar-btn' href="/accounts/login">{% trans "Log In" %}</a>
       </div>
     {% endif %}
