--- a/subscriber_management/templates/subscriber_list.html
+++ b/subscriber_management/templates/subscriber_list.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-{% include 'list_header.html' %}
+{% include 'parts/list_header.html' %}
 <ul class="nav nav-tabs">
   <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-subscribers' list.uuid %}">{% trans 'Subscribers' %}</a></li>
   <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
