--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -10,54 +10,56 @@
 
 {% block content %}
 
-  <div class='row'>
-    <div class='col-lg-6 col-sm-6'>
-      <h3>
-        {% trans "Emails" %}
-      </h3>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-lg-6 col-sm-6'>
+        <h3>
+          {% trans "Emails" %}
+        </h3>
+      </div>
+      <div class='col-lg-6 col-sm-6 text-right'>
+        <br />
+        <a class='btn btn-default' href='{% url "campaign-new" %}'>{% trans 'Compose email' %}</a>
+      </div>
     </div>
-    <div class='col-lg-6 col-sm-6 text-right'>
-      <br />
-      <a class='btn btn-default' href='{% url "campaign-new" %}'>{% trans 'Compose email' %}</a>
-    </div>
-  </div>
 
-  <hr />
+    <hr />
 
-  <div class='row'>
-    <div class='col-lg-12'>
-      <div class="list-group">
-        {% for campaign in object_list %}
-          <a href="{% url 'campaign-detail' campaign.id %}" class="list-group-item">
-            <h4 class="list-group-item-heading">
-              {{ campaign.name }}
-              <small>
-                {% if campaign.is_sent %}
-                <span class='label label-success'>SENT</span>
-                {% else %}
-                <span class='label label-warning'>NOT SENT</span>
-                {% endif %}
-              </small>
-            </h4>
-            <p class="list-group-item-text">
-            {% if campaign.is_sent %}
-            Sent to {{campaign.recipient_count|default:'0'|intcomma}}
-            subscriber{{campaign.recipient_count|pluralize}}
-            <br />
-            {% endif %}
-            <strong>Subject:</strong> {{ campaign.email_subject }}
-            <br />
-            <strong>Sent to:</strong> {{ campaign.email_list.count_validated_subscribers|intcomma }} subscriber{{ campaign.email_list.count_validated_subscribers|pluralize }}
-            <br />
-            <small class='text-muted'>created: {{ campaign.created }}</small>
-            </p>
-          </a>
-        {% empty %}
-          <div class='alert alert-warning'>
-            No email composed yet.
-            <a href="{% url 'campaign-new' %}">Go compose one &raquo;</a>
-          </div>
-        {% endfor %}
+    <div class='row'>
+      <div class='col-lg-12'>
+        <div class="list-group">
+          {% for campaign in object_list %}
+            <a href="{% url 'campaign-detail' campaign.id %}" class="list-group-item">
+              <h4 class="list-group-item-heading">
+                {{ campaign.name }}
+                <small>
+                  {% if campaign.is_sent %}
+                  <span class='label label-success'>SENT</span>
+                  {% else %}
+                  <span class='label label-warning'>NOT SENT</span>
+                  {% endif %}
+                </small>
+              </h4>
+              <p class="list-group-item-text">
+              {% if campaign.is_sent %}
+              Sent to {{campaign.recipient_count|default:'0'|intcomma}}
+              subscriber{{campaign.recipient_count|pluralize}}
+              <br />
+              {% endif %}
+              <strong>Subject:</strong> {{ campaign.email_subject }}
+              <br />
+              <strong>Sent to:</strong> {{ campaign.email_list.count_validated_subscribers|intcomma }} subscriber{{ campaign.email_list.count_validated_subscribers|pluralize }}
+              <br />
+              <small class='text-muted'>created: {{ campaign.created }}</small>
+              </p>
+            </a>
+          {% empty %}
+            <div class='alert alert-warning'>
+              No email composed yet.
+              <a href="{% url 'campaign-new' %}">Go compose one &raquo;</a>
+            </div>
+          {% endfor %}
+        </div>
       </div>
     </div>
   </div>
