--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-  {% trans 'Campaigns' %}
+  {% trans 'Emails' %}
 {% endblock %}
 
 {% block content %}
@@ -31,7 +31,7 @@
           {% for campaign in object_list %}
             <a href="{% url 'campaign-detail' campaign.id %}" class="list-group-item">
               <h4 class="list-group-item-heading">
-                {{ campaign.name }}
+                {{ campaign.email_subject }}
                 <small>
                   {% if campaign.is_sent %}
                   <span class='label label-success'>SENT</span>
