--- a/subscriber_management/templates/subscriber_join_success.html
+++ b/subscriber_management/templates/subscriber_join_success.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<div class='container'>
 <p>
   {%if list_item.success_template %}
     {{list_item.success_template}}
@@ -12,4 +13,5 @@
   {% trans 'You have successfully subscribed to' %} {{list_item.title}}
   {% endif %}
 </p>
+</div>
 {% endblock %}
