--- a/subscriber_management/templates/subscriber_unsubscribe_success.html
+++ b/subscriber_management/templates/subscriber_unsubscribe_success.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<p class="alert alert-success" role="alert">{% trans 'You have successfully unsubscribed from' %} {{list.name}}</p>
+<div class='container'>
+  <p class="alert alert-success" role="alert">{% trans 'You have successfully unsubscribed from' %} {{list.name}}</p>
+</div>
 {% endblock %}
