--- a/subscriber_management/templates/subscriber_validated.html
+++ b/subscriber_management/templates/subscriber_validated.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<p>
-  {% trans 'Your account has successfully been validated to' %} {{list_item.title}}
-</p>
+<div class='container'>
+  <p>
+    {% trans 'Your account has successfully been validated to' %} {{list_item.title}}
+  </p>
+</div>
 {% endblock %}
