--- a/subscriber_management/templates/subscriber_signup_form.html
+++ b/subscriber_management/templates/subscriber_signup_form.html
@@ -4,57 +4,59 @@
 
 
 {% block content %}
-{% include 'parts/list_header.html' %}
-<ul class="nav nav-tabs">
-  <li role="presentation" ><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
-  <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
-  <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">{% trans 'Signup form' %}</a></li>
-  <li role="presentation"><a href="{% url 'subscriber-management-list-settings' list_item.uuid %}">{% trans 'Settings' %}</a></li>
-</ul>
-<br>
-<form>
-  <div class="form-group">
-    <textarea rows="10" class="form-control" disabled>
-      <form method="POST" action="//minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join">
-        <label for="email">Email</label>
-        <input name="email" id="email" type="text" tabindex="1" value=""/>
-        <div style="position: absolute; left: -5000px;">
-              <input type="text" name="{{list_item.signup_token}}" tabindex="-1" value="">
-        </div>
-        <button type="submit" tabindex="2">{% trans 'Register' %}</button>
-      </form>
-    </textarea>
-    <textarea rows="10" class="form-control" id="signup_form_snippet" style="position: absolute; left: -9999px;">
-      <form method="POST" action="//minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join">
-        <label for="email">Email</label>
-        <input name="email" id="email" type="text" tabindex="1" value=""/>
-        <div style="position: absolute; left: -5000px;">
-              <input type="text" name="{{list_item.signup_token}}" tabindex="-1" value="">
-        </div>
-        <button type="submit" tabindex="2">{% trans 'Register' %}</button>
-      </form>
-    </textarea>
-  </div>
-</form>
-<button class="btn btn-primary copy_button" name="copy" data-clipboard-target="#signup_form_snippet">{% trans 'Copy' %}</button>
-<br>
-<br>
-<p>Or with ajax</p>
-<pre>
-    $.post(
-        'http://minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join',
-        {
-            email: '',
-            '{{list_item.signup_token}}': '' //this field SHOULD always be empty!
-        },
-        function (data) {
-            //your handler
-        },
-        'json'
-    )
-</pre>
+  <div class="container">
+    {% include 'parts/list_header.html' %}
+    <ul class="nav nav-tabs">
+      <li role="presentation" ><a href="{% url 'subscriber-management-list-subscribers' list_item.uuid %}">{% trans 'Subscribers' %}</a></li>
+      <li role="presentation"><a href="{% url 'subscriber-management-list-newsletter-homepage' list_item.uuid %}">{% trans 'Newsletter homepage' %}</a></li>
+      <li role="presentation" class="active"><a href="{% url 'subscriber-management-list-sign-up-form' list_item.uuid %}">{% trans 'Signup form' %}</a></li>
+      <li role="presentation"><a href="{% url 'subscriber-management-list-settings' list_item.uuid %}">{% trans 'Settings' %}</a></li>
+    </ul>
+    <br>
+    <form>
+      <div class="form-group">
+        <textarea rows="10" class="form-control" disabled>
+          <form method="POST" action="//minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join">
+            <label for="email">Email</label>
+            <input name="email" id="email" type="text" tabindex="1" value=""/>
+            <div style="position: absolute; left: -5000px;">
+                  <input type="text" name="{{list_item.signup_token}}" tabindex="-1" value="">
+            </div>
+            <button type="submit" tabindex="2">{% trans 'Register' %}</button>
+          </form>
+        </textarea>
+        <textarea rows="10" class="form-control" id="signup_form_snippet" style="position: absolute; left: -9999px;">
+          <form method="POST" action="//minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join">
+            <label for="email">Email</label>
+            <input name="email" id="email" type="text" tabindex="1" value=""/>
+            <div style="position: absolute; left: -5000px;">
+                  <input type="text" name="{{list_item.signup_token}}" tabindex="-1" value="">
+            </div>
+            <button type="submit" tabindex="2">{% trans 'Register' %}</button>
+          </form>
+        </textarea>
+      </div>
+    </form>
+    <button class="btn btn-primary copy_button" name="copy" data-clipboard-target="#signup_form_snippet">{% trans 'Copy' %}</button>
+    <br>
+    <br>
+    <p>Or with ajax</p>
+    <pre>
+        $.post(
+            'http://minimail.fullweb.io/subscribers/list/{{list_item.uuid}}/join',
+            {
+                email: '',
+                '{{list_item.signup_token}}': '' //this field SHOULD always be empty!
+            },
+            function (data) {
+                //your handler
+            },
+            'json'
+        )
+    </pre>
 
-{% include 'import_csv.html' %}
+    {% include 'import_csv.html' %}
+  </div>
 {% endblock %}
 
 {% block script %}
