Add import users by c/c textarea

--- a/subscriber_management/templates/parts/list_header.html
+++ b/subscriber_management/templates/parts/list_header.html
@@ -8,8 +8,8 @@
             Import subscribers <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-            <li><a href="#" data-toggle="modal" data-target="#subscriber_import_csv">{% trans 'From Mailchimp CSV' %}</a></li>
-            <li><a href="#" data-toggle="modal" data-target="#">{% trans 'Copy/paste email addresses' %}</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#subscriber_import_mailchimp">{% trans 'From Mailchimp CSV' %}</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#subscriber_import_text">{% trans 'Copy/paste email addresses' %}</a></li>
         </ul>
     </div>
 </legend>
