--- a/subscriber_management/templates/list_create.html
+++ b/subscriber_management/templates/list_create.html
@@ -14,4 +14,5 @@
     {% endfor %}
     <button class="btn btn-primary">{% trans 'Create' %}</button>
   </form>
+  {% include 'import.html' %}
 {% endblock %}
