--- a/subscriber_management/templates/list_settings.html
+++ b/subscriber_management/templates/list_settings.html
@@ -48,7 +48,6 @@
     </div>
   </div>
 
-  {% include 'import_csv.html' %}
 
   <div id='subscriber_list_delete_confirmation' class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
@@ -81,4 +80,5 @@
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div>
+  {% include 'import.html' %}
 {% endblock %}
