--- a/subscriber_management/templates/list_update.html
+++ b/subscriber_management/templates/list_update.html
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group {% if form.title.errors %}has-error{% endif %}">
       <label for="{{form.description.auto_id}}" class="control-label">{{form.description.label}}</label>
-      <textarea id="{{form.description.auto_id}}" rows=10 name="{{form.description.name}}" class='form-control 's tabindex='2'>{{form.description.value}}</textarea>
+      <textarea id="{{form.description.auto_id}}" rows=10 name="{{form.description.name}}" class='form-control' tabindex='2'>{{form.description.value}}</textarea>
       {% for error in form.description.errors %}
         <span class="error-block">{{error}}</span>
       {% endfor %}
@@ -50,4 +50,5 @@
     <button class="btn btn-primary">{% trans 'Update' %}</button>
   </form>
   </div>
+  {% include 'import.html' %}
 {% endblock %}
